--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#7a001f" />
   <title>d'Frozen — Frozen Food Enak & Praktis</title>
-  <link rel="preload" href="assets/logo.svg" as="image" type="image/svg+xml" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="preload" href="assets/logofozen.png" as="image" type="image/svg+xml" />
+  <link rel="stylesheet" href="css/styles.css" />  
 </head>
 <body>
   <header class="site-header">
