--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="#">
-        <img src="assets/logo.svg" alt="Logo d'Frozen" width="48" height="48" />
+        <img src="assets/logofrozen.png" alt="Logo d'Frozen" width="48" height="48" />
         <span>d'Frozen</span>
       </a>
       <nav class="nav">
